--- a/news/templates/news/index.html
+++ b/news/templates/news/index.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
-
+{% block title %}
+{{ title }}
+{% endblock %}
 {% block sidebar %}
 {% include 'inc/_sidebar.html' %}
 {% endblock %}
