--- a/news/templates/news/view_news.html
+++ b/news/templates/news/view_news.html
@@ -1,36 +1,66 @@
 {% extends 'base.html' %}
 
 {% block title %}
-{{ news_item.title }}
+    {{ news_item.title }}
 {% endblock %}
 
 {% block sidebar %}
-{% include 'inc/_sidebar.html' %}
+    {% include 'inc/_sidebar.html' %}
 {% endblock %}
 
 {% block content %}
-<div class="card mb-3">
-    <div class="card-header">
-        Категория: <a href="{{ news_item.category.get_absolute_url }}">{{ news_item.category }}</a>
-    </div>
-    <div class="card-body">
-        <div class="media">
-            {% if news_item.photo %}
-            <img src="{{ news_item.photo.url }}" alt="" width="350" height="400" class="mr-3">
-            {% else %}
-            <img src="https://picsum.photos/350/400" alt="">
-            {% endif %}
-            <div class="media-body">
-                {% autoescape off %}
-                <h5 class="card-title">{{ news_item.title }}</h5>
-                <p class="card-text">{{ news_item.content }}</p>
-                {% endautoescape %}
-            </div>
+    <div class="card mb-3">
+        <div class="card-header">
+            Категория: <a href="{{ news_item.category.get_absolute_url }}">{{ news_item.category }}</a>
         </div>
+        <div class="card-body">
+            <div class="media">
+                {% if news_item.photo %}
+                    <img src="{{ news_item.photo.url }}" alt="" width="350" height="400" class="mr-3">
+                {% else %}
+                    <img src="https://picsum.photos/350/400" alt="">
+                {% endif %}
+                <div class="media-body">
+                    {% autoescape off %}
+                        <h5 class="card-title">{{ news_item.title }}</h5>
+                        <p class="card-text">{{ news_item.content }}</p>
+                    {% endautoescape %}
+                </div>
+            </div>
 
+        </div>
+        <div class="card-footer text-muted">
+            {{ news_item.created_at|date:"Y-m-d H:i:s" }}
+        </div>
     </div>
-    <div class="card-footer text-muted">
-        {{ news_item.created_at|date:"Y-m-d H:i:s" }}
-    </div>
-</div>
+    {% with comments.count as total_comments %}
+        <h2>
+            {{ total_comments }} comment{{ total_comments|pluralize }}
+        </h2>
+    {% endwith %}
+    {% for comment in comments %}
+        <div class="comment">
+            <p class="info">
+                <i>{{ comment.name }} {{ comment.created }}</i>
+
+                <p></p>
+
+            </p>
+            {{ comment.body|linebreaks }}
+            <p></p>
+        <h3>-----------------------------------------------------------------------</h3>
+        </div>
+    {% empty %}
+        <p>There are no comments yet.</p>
+    {% endfor %}
+    {% if new_comment %}
+        <h2>Your comment has been added.</h2>
+    {% else %}
+        <h2>Add a new comment</h2>
+        <form action="" method="post">
+            {{ comment_form.as_p }}
+            {% csrf_token %}
+            <p><input type="submit" value="Add comment"></p>
+        </form>
+    {% endif %}
 {% endblock %}
