--- a/templates/base.html
+++ b/templates/base.html
@@ -23,9 +23,25 @@
 
         <div class="col-md-7">
             {% block content %}CONTENT{% endblock %}
+
+
+            <nav aria-label="...">
+                <ul class="pagination">
+                    {% for p in page_obj.paginator.page_range %}
+                        {% if page_obj.number == p %}
+                            <li class="page-item active" aria-current="page">
+                                <a class="page-link" href="page={{ p }}">{{ p }}</a>
+                            </li>
+                        {% else %}
+                        <li class="page-item">
+                            <a class="page-link" href="?page={{ p }}">{{ p }}</a>
+                        </li>
+                        {% endif %}
+                    {% endfor %}
+                </ul>
+            </nav>
+
         </div>
-
-
     </div>
 </div>
 
